--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react-media": "^1.10.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "serve": "^13.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "prod": "serve -s build",
+    "heroku-postbuild": "npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
