--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "i18next": "^21.6.2",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "loader-runner": "^4.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.1",
+    "react-input-component": "^0.2.0",
     "react-media": "^1.10.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -50,6 +61,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0"
   }
