--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "serve": "^13.0.2",
+    "socket.io-client": "^4.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
