--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.16.13",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "html-webpack-plugin": "^5.5.0",
     "i18next": "^21.6.2",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
@@ -22,7 +23,6 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.1",
-    "react-input-component": "^0.2.0",
     "react-media": "^1.10.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
