--- a/package.json
+++ b/package.json
@@ -6,33 +6,28 @@
     "node": "16.13.0"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "antd": "^4.16.13",
+    "antd": "^4.18.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
-    "html-webpack-plugin": "^5.5.0",
-    "i18next": "^21.6.2",
+    "i18next": "^21.6.4",
     "i18next-browser-languagedetector": "^6.1.2",
-    "i18next-http-backend": "^1.3.1",
-    "loader-runner": "^4.2.0",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.8.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.1",
+    "react-bootstrap": "^2.0.4",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.15.1",
+    "react-i18next": "^11.15.2",
     "react-media": "^1.10.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-select": "^5.2.1",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "serve": "^13.0.2",
     "socket.io-client": "^4.4.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint '**/*.js'"
+    "lint": "eslint src"
   },
   "eslintConfig": {
     "extends": [
@@ -66,9 +61,6 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
-    "sass": "^1.43.4",
-    "sass-loader": "^12.3.0"
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
